# weekend_os

./: Cargo.toml  linker.ld  riscv32imac-unknown-none-elf.json
.cargo/: config.toml
src/: '  .main.rs.swp  enable_paging.rs  interrupts.rs  main.rs  physical_allocator.rs  traps.rs
