[package]
name = "weekend_os"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x11 << 1) | 1
run-command = ["qemu-system-riscv32", "-machine", "virt", "-bios", "none", "-kernel", "{}"]

